<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_style_title">Style</string>
    <string name="status_bar_clock">Clock &amp; Date</string>
    <string name="status_bar_clock_summary">Customize clock and date in statusbar</string>
    <string name="clock_title_enable">Alignment</string>
    <string name="clock_enabled">Enabled</string>
    <string name="clock_disabled">Disabled</string>
    <string name="status_bar_clock_style_reset">Reset color</string>
    <string name="status_bar_show_clock_title">Show clock &amp; date</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="right_clock">Right clock</string>
    <string name="center_clock">Center clock</string>
    <string name="left_clock">Left clock</string>
    <string name="dont_show">Don\'t show</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_position">Date position</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="am_pm_clock_normal">Normal font size</string>
    <string name="am_pm_clock_small">Small font size</string>
    <string name="am_pm_clock_none">Don\'t show</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="default_string">Default</string>
    <string name="reset">Reset</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary">Right edge of the status bar pulls down Quick Settings</string>
    <string name="color_picker_dialog_title">Color</string>
    <string name="pure_interface">Interface</string>
    <string name="lockscreen_settings_title">Lockscreen and Security</string>
    <string name="lockscreen_options_title">Lockscreen options</string>
    <string name="lockscreen_secure_options_title">Secure Lockscreen options</string>
    <string name="volumerocker_settings_title">Volume rocker</string>
    <string name="navigation_title">Navigation bar</string>
    <string name="notification_drawer_settings_title">Notifications and QS</string>
    <string name="notifdrawer_notifications_title">Notifications</string>
    <string name="notifdrawer_qs_title">Quick Settings</string>
    <string name="statusbar_settings_title">Status bar</string>
    <string name="power_settings_title">Power</string>
    <string name="substratum_settings_title">Display</string>
    <string name="display_cat">Display</string>
    <string name="double_tap_sleep_anywhere_title">Double-tap to sleep anywhere</string>
    <string name="double_tap_sleep_anywhere_summary">Double tap anywhere on the lockscreen to put the device to sleep</string>
    <string name="double_tap_to_sleep_title">Double-tap to sleep</string>
    <string name="double_tap_to_sleep_summary">Double tap on the status bar to put the device to sleep</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
     <string name="proximity_wake_title">Prevent accidental wake up</string>
     <string name="proximity_wake_summary">Check the proximity sensor prior to waking up screen</string>
     <string name="powermenu_lockscreen_title">Power menu on lock screen</string>
     <string name="powermenu_lockscreen_summary">Show power menu on the lock screen</string>
     <string name="toast_icon_title">Toast icon</string>
     <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="volume_steps_title">Volume steps</string>
    <string name="volume_steps_alarm_title">Volume steps: Alarm</string>
    <string name="volume_steps_dtmf_title">Volume steps: DTMF</string>
    <string name="volume_steps_music_title">Volume steps: Music</string>
    <string name="volume_steps_notification_title">Volume steps: Notification</string>
    <string name="volume_steps_ring_title">Volume steps: Ringer</string>
    <string name="volume_steps_system_title">Volume steps: System</string>
    <string name="volume_steps_voice_call_title">Volume steps: Voice Call</string>
    <string name="volume_steps_reset">Reset</string>
    <string name="volume_steps_60" translatable="false">60</string>
    <string name="volume_steps_45" translatable="false">45</string>
    <string name="volume_steps_30" translatable="false">30</string>
    <string name="volume_steps_15" translatable="false">15</string>
    <string name="volume_steps_7" translatable="false">7</string>
    <string name="volume_steps_5" translatable="false">5</string>
    <string name="systemui_tuner_statusbar_title">Status bar items</string>
    <string name="systemui_tuner_statusbar_summary">Show/hide status bar items</string>
    <string name="systemui_tuner_other_title">Other</string>
    <string name="pure_sys">Misc</string>
    <string name="misc_title">Other</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="show_network_traffic_state">Status bar traffic monitor</string>
    <string name="network_traffic_summary">Enable various network traffic options in statusbar</string>
    <string name="show_network_traffic_unit">Display unit</string>
    <string name="show_network_traffic_frequency">Update interval</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Outgoing</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="show_network_traffic_bit">Bits per second</string>
    <string name="show_network_traffic_byte">Bytes per second</string>
    <string name="show_network_traffic_500">500 ms</string>
    <string name="show_network_traffic_1000">1000 ms</string>
    <string name="show_network_traffic_1500">1500 ms</string>
    <string name="show_network_traffic_2000">2000 ms</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="qs_advanced_data_title">Data easy toggle</string>
    <string name="qs_advanced_data_summary">Enable one tap action to enable or disable data</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="omni_battery_light_settings">Battery charging light</string>
    <string name="omni_notification_light_settings">Notifications light</string>
    <string name="omni_leds">LED Lights</string>
    <string name="batterylight_title">Battery LED settings</string>
    <string name="battery_light_enable">Enable</string>
    <string name="battery_low_pulse_title">Pulse if battery low</string>
    <string name="battery_light_list_title">Colors</string>
    <string name="battery_light_low_color_title">Battery low</string>
    <string name="battery_light_medium_color_title">Charging</string>
    <string name="battery_light_full_color_title">Charged (90%)</string>
    <string name="battery_light_really_full_color_title">Charged (100%)</string>
    <string name="edit_battery_settings">Edit battery settings</string>
    <string name="notification_light_general_title">General</string>
    <string name="led_color_green">Green</string>
    <string name="led_color_red">Red</string>
    <string name="led_color_blue">Blue</string>
    <string name="ok">OK</string>
    <string name="advanced">Advanced</string>
    <string name="profiles_add">Add...</string>
    <string name="edit_light_settings">Edit light settings</string>
    <string name="pulse_speed_title">Pulse length and speed</string>
    <string name="default_time">Normal</string>
    <string name="custom_time">Custom</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="pulse_length_always_on">Always on</string>
    <string name="pulse_length_very_short">Very short</string>
    <string name="pulse_length_short">Short</string>
    <string name="pulse_length_normal">Normal</string>
    <string name="pulse_length_long">Long</string>
    <string name="pulse_length_very_long">Very long</string>
    <string name="pulse_speed_very_fast">Very fast</string>
    <string name="pulse_speed_fast">Fast</string>
    <string name="pulse_speed_normal">Normal</string>
    <string name="pulse_speed_slow">Slow</string>
    <string name="pulse_speed_very_slow">Very slow</string>
    <string name="notification_light_title">Notification light</string>
    <string name="notificationlight_title">Notification LED settings</string>
    <string name="notification_light_applist_title">Apps</string>
    <string name="notification_light_phonelist_title">Phone</string>
    <string name="notification_light_use_custom">Use custom values</string>
    <string name="notification_light_default_value">Default</string>
    <string name="notification_light_missed_call_title">Missed call</string>
    <string name="notification_light_voicemail_title">Voicemail</string>
    <string name="notification_light_brightness" translatable="false">@string/brightness</string>
    <string name="notification_light_screen_on">Lights with screen on</string>
    <string name="notification_light_zen_mode">Lights in Do Not Disturb mode</string>
    <string name="notification_light_use_multiple_leds">Multiple LEDs</string>
    <string name="keywords_lights_brightness_level">dim leds brightness</string>
    <string name="notification_light_automagic">AutoColor</string>
    <string name="notification_light_automagic_summary">Automatically set a proper color for the led notification if the app has no custom values</string>
    <string name="led_notification_title">Light settings</string>
    <string name="led_notification_text">LED light enabled by settings</string>
    <string name="notification_light_no_apps_summary">To add per app control, activate \'%1$s\' and press \'\u002b\' on the menu bar</string>
    <string name="font_sample_text">11:57</string>
    <string name="keyguard_torch_title">Lockscreen torch</string>
    <string name="keyguard_torch_summary">Longpress power button while screen is off to turn on flashlight</string>
</resources>