<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Pure Nexus Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
        android:title="@string/custom_settings_title" >

    <PreferenceCategory
        android:key="pure_interface"
        android:title="@string/pure_interface">

        <PreferenceScreen
            android:fragment="com.pure.settings.fragments.LockScreenSettings"
            android:key="pure_lockscreen_settings"
            android:title="@string/lockscreen_settings_title"/>

        <PreferenceScreen
            android:fragment="com.pure.settings.fragments.NavBarSettings"
            android:key="pure_navbar_settings"
            android:title="@string/navbar_settings_title"/>

        <PreferenceScreen
            android:fragment="com.pure.settings.fragments.NotificationDrawerSettings"
            android:key="pure_notification_drawer_settings"
            android:title="@string/notification_drawer_settings_title"/>

        <PreferenceScreen
            android:fragment="com.pure.settings.fragments.StatusBarSettings"
            android:key="pure_statusbar_settings"
            android:title="@string/statusbar_settings_title"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pure_sys"
        android:title="@string/pure_sys">

        <PreferenceScreen
            android:fragment="com.pure.settings.fragments.PowerSettings"
            android:key="pure_power_settings"
            android:title="@string/power_settings_title"/>

        <PreferenceScreen
            android:fragment="com.pure.settings.fragments.VolumeRockerSettings"
            android:key="pure_volumerocker_settings"
            android:title="@string/volumerocker_settings_title"/>

        <PreferenceScreen
            android:key="systemui_tuner_other"
            android:title="@string/systemui_tuner_other_title" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.OtherPrefsActivity" />
        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="leds"
        android:title="@string/omni_leds" >

        <PreferenceScreen
                android:key="charging_light"
                android:title="@string/omni_battery_light_settings"
                android:fragment="com.pure.settings.batterylight.BatteryLightSettings" />

        <PreferenceScreen
                android:key="notification_light"
                android:title="@string/omni_notification_light_settings"
                android:fragment="com.pure.settings.batterylight.NotificationLightSettings" />
    </PreferenceCategory>

</PreferenceScreen>
